--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="start_travel">Start Travel</string>
     <string name="start_work">Start Work</string>
     <string name="stop">Stop</string>
+    <string name="travelling">Travelling</string>
+    <string name="working">Working</string>
+    <string name="open">Open</string>
 </resources>
