--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">task-list</string>
+    <string name="app_name">Task List</string>
     <string name="start_travel">Start Travel</string>
     <string name="start_work">Start Work</string>
     <string name="stop">Stop</string>
